# tags

./: .gitignore  .travis.yml  COPYING  README.md  io.github.phastmike.tags.json  meson.build  org.ampr.ct1enq.tagger.json
data/: io.github.phastmike.tags.appdata.xml.in  io.github.phastmike.tags.desktop.in  io.github.phastmike.tags.gschema.xml  meson.build  org.ampr.ct1enq.gtat.appdata.xml.in  org.ampr.ct1enq.gtat.desktop.in  org.ampr.ct1enq.gtat.gschema.xml  org.ampr.ct1enq.tagger.appdata.xml.in  org.ampr.ct1enq.tagger.desktop.in  org.ampr.ct1enq.tagger.gschema.xml  org.ampr.ct1enq.tags.appdata.xml.in  org.ampr.ct1enq.tags.desktop.in  org.ampr.ct1enq.tags.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  README.md  io.github.phastmike.tags.pot  meson.build  pt_BR.mo  pt_BR.po  pt_PT.po  tags.pot  zh_CN.po
src/: application.vala  color-scheme.vala  column-tag-enabled.ui  config.vala.in  filter-dialog-window-gtk3.ui  filter-dialog-window.ui  filter-dialog-window.vala  filters-tree-view.ui  filters-tree-view.vala  filters_tree_view.ui  filters_tree_view.vala  gtat.gresource.xml  line-filter.vala  line_filter.vala  lines-tree-view.ui  lines-tree-view.vala  lines_tree_view.ui  lines_tree_view.vala  main.vala  meson.build  minimap-scroll-manager.vala  preferences-dialog.ui  preferences-dialog.vala  preferences-window.ui  preferences-window.vala  preferences.vala  tag-dialog-window.ui  tag-dialog-window.vala  tag-store.vala  tag.vala  tagger.gresource.xml  tags-column-view.ui  tags-column-view.vala  tags-tree-view.ui  tags-tree-view.vala  tags.gresource.xml  tags.gresources.xml  text-minimap.vala  window.ui  window.vala
src/application/: meson.build
src/colors/: color-scheme.vala  meson.build
src/dialogs/: meson.build  ui-dialogs.vala
src/gtk/: help-overlay.ui
src/lines/: filter.vala  filterer.vala  line-store.vala  line.vala  lines-column-view.ui  lines-column-view.vala  lines-persistence-manager.vala  lines-persistence.vala  lines-tree-view.vala  lines.vala  meson.build
src/minimap/: meson.build  minimap-scroll-manager.vala  minimap.vala
src/preferences/: meson.build  preferences-dialog.vala  preferences.vala
src/tag/: helpers.vala  meson.build  tag-dialog-window.vala  tag-row.ui  tag-row.vala  tag-row2.ui  tag-row3.ui  tag-store.vala  tag-style-store.vala  tag-style.vala  tag.vala  tags-column-view.ui  tags-column-view.vala  tags-persistence-manager.vala  tags-persistence.vala  tags-tree-view.vala  tags-view.ui  tags-view.vala
src/ui/: lines-column-view.ui  lines-tree-view.ui  main-window.ui  preferences-dialog.ui  tag-dialog-window.ui  tag-row.ui  tags-tree-view.ui  tags-view.ui  welcome-page.ui  window.ui
src/window/: main-window.vala  meson.build  model-mixer.vala  welcome-page.vala  window.vala
