i18n.gettext(
  meson.project_name(),
  preset: 'glib',
  args: [
    '--package-name=' + meson.project_name(),
    '--package-version=' + meson.project_version(),

    '--copyright-holder=José Miguel Fonte',
    '--msgid-bugs-address=https://github.com/phastmike/tags/issues',

    '--from-code=UTF-8',
    '--add-location',
	 #'--no-location',
    '--width=120',

    # Custom translatable wrappers, list keywords
    # '--keyword=_',
    # '--keyword=N_',
    # '--keyword=C_:1c,2',
    # '--keyword=NC_:1c,2',
  ]
)

